--- a/.github/workflows/main_attendance-system.yml
+++ b/.github/workflows/main_attendance-system.yml
@@ -39,17 +39,20 @@ jobs:
         run: |
           echo "Zipping the backend code..."
           cd ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-          zip -r ../../release.zip ./*
-          ls -al ../../release.zip  # Confirm release.zip exists after zipping
+          zip -r ../../release.zip ./*  # Ensure zip file is created in the root
+          ls -al ../../release.zip  # Confirm release.zip exists in the root directory
           cd ../..
+
+      - name: List files in the root directory
+        run: ls -al ./  # Confirm the location of release.zip before upload
 
       - name: Upload artifact for deployment
         uses: actions/upload-artifact@v4
         with:
           name: node-app  # Ensure artifact name is consistent
-          path: release.zip
+          path: release.zip  # Path is the root directory where release.zip is created
           retention-days: 1  # Optional: Ensures the artifact is available for 1 day
-
+          
   deploy:
     runs-on: ubuntu-latest
     needs: build
