--- a/.github/workflows/main_attendance-system.yml
+++ b/.github/workflows/main_attendance-system.yml
@@ -7,17 +7,17 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: './backend'
-  NODE_VERSION: '20.x'
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: './backend'  # Path to your backend code
+  NODE_VERSION: '20.x'  # Node.js version to use
 
 jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: read  # Grant read access to repository contents
 
     steps:
-      - name: 'Checkout GitHub Action'
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Setup Node.js
@@ -30,32 +30,28 @@ jobs:
           cd ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
           npm install
           npm run build --if-present
-          cd ../..
+          cd ..
 
-      - name: List files in the backend before zipping
-        run: ls -al ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}  # Confirm files before zipping
+      - name: List files in backend directory before zipping
+        run: ls -al ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}  # List files in backend directory to confirm content
 
       - name: Zip backend for deployment
         run: |
-          echo "Zipping the backend code..."
+          echo "Zipping backend code..."
           cd ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-          zip -r ../../release.zip ./*  # Ensure zip file is created in the root
-          ls -al ../../release.zip  # Confirm release.zip exists in the root directory
-          cd ../..
-
-      - name: List files in the root directory
-        run: ls -al ./  # Confirm the location of release.zip before upload
+          zip -r ../release.zip ./*  # Create the zip file in the root directory
+          cd ..
+          ls -al release.zip  # Verify release.zip exists in the root directory
 
       - name: Upload artifact for deployment
         uses: actions/upload-artifact@v4
         with:
-          name: node-app  # Ensure artifact name is consistent
-          path: release.zip  # Path is the root directory where release.zip is created
-          retention-days: 1  # Optional: Ensures the artifact is available for 1 day
-          
+          name: node-app  # Artifact name must match
+          path: ./release.zip  # Correct path is release.zip in the root directory
+
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build  # Ensure the deploy job only runs after the build job
 
     steps:
       - name: Checkout the repo
@@ -64,19 +60,19 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: node-app  # Ensure artifact name is consistent during download
+          name: node-app  # Artifact name must match the one in the build job
           path: ./  # Download to the current directory
 
       - name: List files after downloading artifact
-        run: ls -al ./  # Confirm the artifact is downloaded here
+        run: ls -al ./  # Verify artifact is downloaded here
 
       - name: Unzip artifact
-        run: unzip ./release.zip -d ./  # Unzip to the current directory
+        run: unzip ./release.zip -d ./  # Unzip the downloaded artifact to the current directory
 
       - name: Deploy to Azure Functions
         uses: Azure/functions-action@v1
         with:
-          app-name: 'attendance-system'
-          slot-name: 'Production'
+          app-name: 'attendance-system'  # Azure Function App name
+          slot-name: 'Production'  # Azure deployment slot
           package: './'  # Deploy from the current directory
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_6990CE976B0548079E103CFBF1F348B2 }}
