--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "RegisterUser",
+  "name": "face-attendance-backend",
   "version": "1.0.0",
+  "main": "index.js",
+  "type": "module",
   "dependencies": {
-    "axios": "^1.6.0",
-    "mongodb": "^5.8.0"
+    "axios": "^1.6.7",
+    "mongodb": "^6.3.0"
   }
 }
